尚硅谷SpringBoot教程 update

--- a/尚硅谷SpringBoot教程/spring-boot-04-web-restfulcrud/src/main/resources/application.properties
+++ b/尚硅谷SpringBoot教程/spring-boot-04-web-restfulcrud/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.servlet.context-path=/crud
 
 # \u56FD\u9645\u5316\u8DEF\u5F84
 spring.messages.basename=i18n.login
+
+#
+spring.mvc.date-format=yyyy-MM-dd
