--- a/notes/SpringMVC/SpringMVC/pom.xml
+++ b/notes/SpringMVC/SpringMVC/pom.xml
@@ -14,6 +14,8 @@
         <module>springmvc-03-anno</module>
         <module>springmvc-04-controller</module>
         <module>springmvc-05-json</module>
+        <module>springmvc-06-ajax</module>
+        <module>springmvc-07-Interceptor</module>
     </modules>
 
     <dependencies>
