--- a/notes/SpringBoot/code/springboot-02-config/pom.xml
+++ b/notes/SpringBoot/code/springboot-02-config/pom.xml
@@ -32,6 +32,19 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.21.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
