--- a/notes/SpringBoot/code/springboot-03-web/src/main/resources/application.properties
+++ b/notes/SpringBoot/code/springboot-03-web/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8081
 # \u81EA\u5B9A\u4E49\u914D\u7F6E\u65E5\u671F\u683C\u5F0F\u5316
 #spring.mvc.date-format=
 
+spring.web.resources.static-locations
