--- a/notes/Spring-jiemi/springjiemi/pom.xml
+++ b/notes/Spring-jiemi/springjiemi/pom.xml
@@ -13,4 +13,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.10</version>
+        </dependency>
+    </dependencies>
 </project>
