--- a/notes/spring6/spring6/pom.xml
+++ b/notes/spring6/spring6/pom.xml
@@ -11,6 +11,9 @@
     <modules>
         <module>spring-first</module>
         <module>spring6-ioc-xml</module>
+        <module>spring6-ioc-annotation</module>
+        <module>andyron-spring</module>
+        <module>spring6-aop</module>
     </modules>
 
     <properties>
@@ -43,6 +46,13 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j2-impl</artifactId>
             <version>2.19.0</version>
+        </dependency>
+
+        <!-- @Resource -->
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
         </dependency>
     </dependencies>
 </project>
