--- a/notes/spring6/spring6/spring6-junit/pom.xml
+++ b/notes/spring6/spring6/spring6-junit/pom.xml
@@ -9,27 +9,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring6-aop</artifactId>
+    <artifactId>spring6-junit</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <!--spring aop依赖-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>6.0.2</version>
-        </dependency>
-        <!--spring aspects依赖-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aspects</artifactId>
-            <version>6.0.2</version>
-        </dependency>
-    </dependencies>
 
 </project>
