--- a/notes/spring6/spring6/spring6-validator/pom.xml
+++ b/notes/spring6/spring6/spring6-validator/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring6-aop</artifactId>
+    <artifactId>spring6-validator</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -18,18 +18,16 @@
     </properties>
 
     <dependencies>
-        <!--spring aop依赖-->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>6.0.2</version>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.5.Final</version>
         </dependency>
-        <!--spring aspects依赖-->
+
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aspects</artifactId>
-            <version>6.0.2</version>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>4.0.1</version>
         </dependency>
     </dependencies>
-
 </project>
