--- a/notes/SpringBoot/code/springboot-02-config/src/main/resources/application.yaml
+++ b/notes/SpringBoot/code/springboot-02-config/src/main/resources/application.yaml
@@ -37,3 +37,32 @@ teacher:
   happy: true
   birth:  1988/12/01
   email: xxxxx@163.com
+
+debug: true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
